change worker schema